--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "mage/dotenv": "^1.0",
         "illuminate/database": "^10",
         "illuminate/container": "^10",
-        "illuminate/events": "^10"
+        "illuminate/events": "^10",
+        "laravel/helpers": "^1.7"
     },
     "type": "magento2-module",
     "autoload": {
@@ -13,6 +14,6 @@
             "Mage\\DB2\\": ""
         }
     },
-    "version": "1.0.4",
+    "version": "1.0.5",
     "minimum-stability": "stable"
 }
